# Airship

./: README.md
Assembly Guide/: Bill_of_Materials.xlsx  README.md
CAD/gondola/: Thumbs.db  back_leg.sldprt  bracket_detached.SLDPRT  frame_v3.SLDPRT  front_leg.sldprt  left_wing.sldprt  left_wing_10deg.sldprt  left_wing_20deg.sldprt  left_wing_5deg.sldprt  platform.SLDASM  right_wing.sldprt  right_wing_10deg.sldprt  right_wing_20deg.sldprt  right_wing_5deg.sldprt
CAD/gondola/stl/: back_leg.STL  bracket_detached.STL  frame_v3.STL  front_leg.STL  gondola.factory  gondola_tilted.factory  left_wing.STL  left_wing_10deg.STL  left_wing_20deg.STL  left_wing_5deg.STL  modules.factory  right_wing.STL  right_wing_10deg.STL  right_wing_20deg.STL  right_wing_5deg.STL
CAD/parts/: RaspberryPiZeroW.SLDPRT  battery_1s_500mah.SLDPRT  envelope_spherical.SLDPRT  pinheader_bent.SLDPRT  pinheader_straight.SLDPRT  plantraco_7mm_motor.SLDPRT  propeller_57mm.SLDPRT  propeller_65mm.SLDPRT  receiver_micro9_4ch.SLDPRT
CAD/parts/RaspberryPiCameraModuleV2/: 4pin_smd.sldprt  70521906.sldasm  70521906_01.sldprt  70521906_02.sldprt  70521906_03.sldprt  70521906_04.sldprt  70521906_05.sldprt  70521906_06.sldprt  70521906_07.sldprt  CAPC-0402-T0.55-BN.sldprt  CAPC-0805-T0.75-BN.sldprt  CCD.sldprt  KX7 SMD Quartz Crystal Resonator 3.2x2.5mm.sldprt  OVA5647_Housing.sldprt  OVA5647_Lens_FOV.sldprt  PicameraPCB.sldprt  RESC-0402.sldprt  RESC-0603.sldprt  RESC-1210.sldprt  RspCameraMia.SLDASM  SOT23-5.sldprt  c-1-1734248-5-e-raspberry_display.sldprt  c6aaa.sldprt  ribbon_cam.sldprt
CAD/parts/lepton/: lepton_breakout.SLDASM
CAD/parts/lepton/board/: 1050281001.sldasm  595492200.sldasm  603290992.sldasm  603291120.sldasm  603291248.sldasm  603291376.sldasm  C1.sldasm  (+49 more)
CAD/parts/powerboost-500c-1.snapshot.1/: PowerBoost 500C v24.err  PowerBoost 500C v24.step
ROS Interface/: README.md
ROS Interface/airshippi_vicon/: CMakeLists.txt  package.xml  setup.py
ROS Interface/airshippi_vicon/msg/: Rotor.msg  RotorPair.msg
ROS Interface/airshippi_vicon/scripts/: altitude_controller.py  carrot_path_follower.py  carrot_path_follower_v.py  carrot_path_follower_varbase.py  carrot_path_follower_varbase_v.py  nlgl_path_follower.py  pigpio_setter.py  yaw_controller.py
ROS Interface/airshippi_vicon/src/airshippi_vicon/: testmodule.py
ROS Interface/airshippi_vicon/src/airshippi_vicon/Path2D/: Arc.py  Line.py  Path.py  Segment.py  test.py
(+5 files in other folders)
